Java 25 for catalog-service