@@ -1,12 +1,14 @@
 package com.acmecorp.catalog;
 
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
-
-import java.util.List;
-import java.util.UUID;
 
 @Path("/api/catalog")
 @Produces(MediaType.APPLICATION_JSON)
@@ -14,7 +16,7 @@ import java.util.UUID;
 public class CatalogResource {
 
     private final ProductRepository productRepository;
-    private static final java.time.Instant SEED_INSTANT = java.time.Instant.parse("2024-01-01T00:00:00Z");
+    private static final Instant SEED_INSTANT = Instant.parse("2024-01-01T00:00:00Z");
 
     public CatalogResource(ProductRepository productRepository) {
         this.productRepository = productRepository;
@@ -65,13 +67,13 @@ public class CatalogResource {
     @Path("/seed")
     @Transactional
     public List<Product> seed() {
-        List<Product> products = List.of(
-                build(UUID.fromString("11111111-1111-1111-1111-111111111111"), "ACME-STREAM-001", "Acme Streamer Pro", "HD streaming subscription with analytics dashboard", "SAAS", new java.math.BigDecimal("49.00")),
-                build(UUID.fromString("22222222-2222-2222-2222-222222222222"), "ACME-ALERT-001", "Alerting Add-on", "Real-time alerts and incidents with on-call rotation", "ADDON", new java.math.BigDecimal("19.00")),
-                build(UUID.fromString("33333333-3333-3333-3333-333333333333"), "ACME-STORAGE-010", "Secure Storage 1TB", "Encrypted cloud storage for media and backups", "STORAGE", new java.math.BigDecimal("29.00")),
-                build(UUID.fromString("44444444-4444-4444-4444-444444444444"), "ACME-AI-001", "AI Insights", "Predictive recommendations for digital storefronts", "SAAS", new java.math.BigDecimal("59.00"))
+        var products = List.of(
+                build(UUID.fromString("11111111-1111-1111-1111-111111111111"), "ACME-STREAM-001", "Acme Streamer Pro", "HD streaming subscription with analytics dashboard", "SAAS", new BigDecimal("49.00")),
+                build(UUID.fromString("22222222-2222-2222-2222-222222222222"), "ACME-ALERT-001", "Alerting Add-on", "Real-time alerts and incidents with on-call rotation", "ADDON", new BigDecimal("19.00")),
+                build(UUID.fromString("33333333-3333-3333-3333-333333333333"), "ACME-STORAGE-010", "Secure Storage 1TB", "Encrypted cloud storage for media and backups", "STORAGE", new BigDecimal("29.00")),
+                build(UUID.fromString("44444444-4444-4444-4444-444444444444"), "ACME-AI-001", "AI Insights", "Predictive recommendations for digital storefronts", "SAAS", new BigDecimal("59.00"))
         );
-        List<UUID> ids = products.stream().map(p -> p.id).collect(java.util.stream.Collectors.toList());
+        var ids = products.stream().map(p -> p.id).toList();
         productRepository.delete("id in ?1", ids);
         products.forEach(productRepository::persist);
         return products;
@@ -80,7 +82,7 @@ public class CatalogResource {
     @GET
     @Path("/status")
     public Object status() {
-        return java.util.Map.of("service", "catalog-service", "status", "OK");
+        return Map.of("service", "catalog-service", "status", "OK");
     }
 
     private void applyRequest(Product product, ProductRequest request) {
@@ -91,10 +93,10 @@ public class CatalogResource {
         product.currency = request.currency();
         product.category = request.category();
         product.active = request.active();
-        product.updatedAt = java.time.Instant.now();
+        product.updatedAt = Instant.now();
     }
 
-    private Product build(UUID id, String sku, String name, String description, String category, java.math.BigDecimal price) {
+    private Product build(UUID id, String sku, String name, String description, String category, BigDecimal price) {
         Product product = new Product();
         product.id = id;
         product.sku = sku;
